# TTMSqueezer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  to-do.txt
TTMSqueezer/: CMakeLists.txt
TTMSqueezer/data/: finnhub_client.cpp  parse_json.cpp  yfinance_client.cpp
TTMSqueezer/data/include/: finnhub_client.h  parse_json.h  yfinance_client.h
TTMSqueezer/include/: ttm_calculator.h
TTMSqueezer/include/core/: Config.h  Logger.h  ParseJSON.h  TradeData.h
TTMSqueezer/include/datafeed/: FinnhubFeed.h  IDataFeed.h  YFinanceFeed.h
TTMSqueezer/include/indicators/: TTMCalculator.h
TTMSqueezer/src/: main.cpp  ttm_calculator.cpp
TTMSqueezer/src/core/: Config.cpp  Logger.cpp  ParseJSON.cpp  TradeData.cpp
TTMSqueezer/src/datafeed/: FinnhubFeed.cpp  YFinanceFeed.cpp
TTMSqueezer/src/indicators/: TTMCalculator.cpp
